Included nav menu
also included body for api response

--- a/index.html
+++ b/index.html
@@ -11,7 +11,36 @@
 </head>
 
 <body>
-    <div id="ciudad"></div>
+    <header>
+        <div id="img">
+            <img src="img/logo.png" alt="tarkov text font">
+        </div>
+        <div id="menu">
+            <ul>
+                <li>
+                    <h2 id="ammo">Munición</h2>
+                </li>
+                <li>
+                    <h2 id="helmet">Cascos</h2>
+                </li>
+                <li>
+                    <h2 id="headset">Auriculares</h2>
+                </li>
+                <li>
+                    <h2 id="gun">Armas</h2>
+                </li>
+                <li>
+                    <h2 id="vest">Chalecos</h2>
+                </li>
+                <li>
+                    <h2 id="keys">Llaves</h2>
+                </li>
+            </ul>
+        </div>
+    </header>
+
+    <section id="content">
+    </section>
 </body>
 
 </html>
