--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div id="img">
-            <img src="img/logo.png" alt="tarkov text font">
+            <a href=""><img src="img/logo.png" alt="tarkov text font"></a>
         </div>
         <div id="menu">
             <ul>
@@ -27,10 +27,7 @@
                     <h2 id="headset">Auriculares</h2>
                 </li>
                 <li>
-                    <h2 id="gun">Armas</h2>
-                </li>
-                <li>
-                    <h2 id="vest">Chalecos</h2>
+                    <h2 id="armor">Protección antibalas</h2>
                 </li>
                 <li>
                     <h2 id="keys">Llaves</h2>
