--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
         <div id="menu">
             <ul>
                 <li>
-                    <h2 id="ammo">Munición</h2>
+                    <h2 id="ammo">Munición 🏹</h2>
                 </li>
                 <li>
-                    <h2 id="helmet">Cascos</h2>
+                    <h2 id="helmet">Cascos ⛑️</h2>
                 </li>
                 <li>
-                    <h2 id="headset">Auriculares</h2>
+                    <h2 id="headset">Auriculares 🎧</h2>
                 </li>
                 <li>
-                    <h2 id="armor">Protección antibalas</h2>
+                    <h2 id="armor">Protección antibalas 🛡️</h2>
                 </li>
                 <li>
-                    <h2 id="keys">Llaves</h2>
+                    <h2 id="keys">Llaves 🔑</h2>
                 </li>
             </ul>
         </div>
     </header>
 
     <section id="content">
+
+        <h3>Bienvenido a la web de consultas de Escape From Tarkov, utiliza el menú superior para navegar entre los distintos tipos de objetos de tarkov y haz click cobre dichos objetos para conocer toda su información.</h3>
     </section>
     <section id="navigation">
     </section>
