--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <div id="img">
             <a href=""><img src="img/logo.png" alt="tarkov text font"></a>
         </div>
